@@ -1,13 +1,0 @@
-DEFINED_PHASES=compile install prepare
-DEPEND=>=dev-libs/openssl-1.0 media-libs/alsa-lib media-libs/libsdl[X,sound,video,alsa] media-libs/portaudio[alsa] media-libs/sdl-mixer media-libs/sdl-sound media-libs/x264 media-video/ffmpeg:0[X] net-libs/sofia-sip dev-qt/qtcore:4 dev-qt/qtdbus:4 dev-qt/qtgui:4 dev-qt/qtmultimedia:4 dev-qt/qtwebkit:4 pulseaudio? ( media-sound/pulseaudio )
-DESCRIPTION=Homer Conferencing (short: Homer) is a free SIP softphone with advanced audio and video support
-EAPI=4
-HOMEPAGE=http://www.homer-conferencing.com
-IUSE=pulseaudio
-KEYWORDS=~amd64 ~x86
-LICENSE=GPL-2
-RDEPEND=>=dev-libs/openssl-1.0 media-libs/alsa-lib media-libs/libsdl[X,sound,video,alsa] media-libs/portaudio[alsa] media-libs/sdl-mixer media-libs/sdl-sound media-libs/x264 media-video/ffmpeg:0[X] net-libs/sofia-sip dev-qt/qtcore:4 dev-qt/qtdbus:4 dev-qt/qtgui:4 dev-qt/qtmultimedia:4 dev-qt/qtwebkit:4 pulseaudio? ( media-sound/pulseaudio )
-SLOT=0
-SRC_URI=https://github.com/Homer-Conferencing/Homer-Conferencing/archive/V0.25.tar.gz -> homer-0.25.tar.gz
-_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	79b635d29abf0572d6a1b0dc8e63c0e4
-_md5_=9754a5f43b9b202485fc5e71304d0327
