@@ -7,16 +7,14 @@ DIST homer-0.24.1.tar.gz 1297045 SHA256 738cd4a1e8b437936c904bdea649c0ee12ecca2c
 DIST homer-0.25-ffmpeg2.patch 65617 SHA256 ce1327a59dc20c2fbe23e968786ecce21126cdb2119916bf2227594dc8c0a229 SHA512 fb4ca0bd161c94999b54b86337220f3f018672e4a5031788d8292273515fe68d4364574645d96e04b19bdb64f1b032119503cf823c7604d625015ba0cdabf030 WHIRLPOOL 909069e830b9ef473a006f686a5e5e9f7279c5b0fc8fb8f212a30b767106055970441fa4fdbe2d443fce500024bc00494c112ebb3b95a65a475b2731e8d361c7
 DIST homer-0.25.tar.gz 1404242 SHA256 1c3e67a7f7134a317bc32dfb691679a2997fbfa129c70d5d165ccfd0272a752d SHA512 92254f9cc133589760a4c3081e1636232ace8eb972f7800c4fb5aaeba52e22546c6772e4c93625aa31a5d7b366f441cf8155f52d85ca44dade60edebf98b6340 WHIRLPOOL 944277b8248a1037dd27881456b6fb304d19d2f12cc7bc4268ba3dbf876de668fde25749dfbfd424950fe641d7dc65f5f14a29e9d14d5c1e738dc555af201ffe
 EBUILD homer-0.24.1-r1.ebuild 1627 SHA256 4eb42efbf6c79bd31385890b8262a0dc398bc19d981815d2f5e4f3297c43d8ea SHA512 1027cab7f7aa0f8ebe80e87ef5237f2e731aa464ee0a52536bef3879935fe2287bcf528bff81f584606855379a38ff98f57112247dee69d71439ec1e064ed0a4 WHIRLPOOL 4b15c349c2e72dcdaddc6099e66e4da4ea9d95b81bcd213752391f5794740ac76e781cf42eaeeb56d2336d510973131e78b79b2858308944d7cf555f0a29b347
-EBUILD homer-0.24.1.ebuild 1572 SHA256 ef8d5cdef412b5385d6908585f70a41d6b547f48f32b6c3d5bc5364c4105cd39 SHA512 765dd360c622025caec8310e3aea28ab48dad6ccc2c30f1d0cc3ea03e89e1103bd321370ab0cf6b01baaf972f4ff6015b928f607fc7e6252e1a56cc56f5b4ab7 WHIRLPOOL 0229b81597e1bdb6172f862ab314b2438f27bbc5c071987598fcb552a682510a4b67b02b861b227e8773ebc405b8b25990179b238e05da42cb90a48d748a0efc
 EBUILD homer-0.25-r1.ebuild 1978 SHA256 6a3cb6eb76e449c4210c779adf766614baf4ecd3776c6ae84f4a513d8c4e895c SHA512 c815e61a315e6496e1960d5e4b98345fb4ae180f40e321224dfb804a6ac4ec65824b5087581c3ec30ee501c81ce345cfcbb1813cee0a3360e1c1e2ae2e87ccad WHIRLPOOL 82c452d53425ceb539aae16eca70618efac3937bccecb1e33d9cc8bbf0d98dab9e9dfaeb7de2f953bbd583ce556286ae39c6625376c8307e38e9fa85f0b665d4
-EBUILD homer-0.25.ebuild 1747 SHA256 a179797d04a89058ddb984fb0728267a0a08f49b90e51e692b01396abb3998fb SHA512 55a4c84da3ee8e2b070bdcb9fe0968a95d85124adeaac1a5abc34bb988393dc0152a97b16064c0ac57ebea29b127ab41e3c0c018e5c17c37f0ee291adccf396d WHIRLPOOL f393f7317a324f4c183de96349843fefe65f5b3b1f92fd4897ab000cfd9c89bb4eb7807455befcaeb6270cf48d8e6ab6c01832d7ea47e1edecb33a3a7af0738a
 EBUILD homer-9999.ebuild 1749 SHA256 cdfd18a6993589f7e559cccc313bc4fdce013a2ca3b7491c1bbcd3027e73e3a8 SHA512 178b91318c6514212ded3164a42d5a726f88c3cffbffb1a9191dbce52848bc733f656e196876b98d900fe6cc2d1025ea155f2f5229f671678e3cbcec12d8cfeb WHIRLPOOL 31efbb9c7b5745aa8e00449a206cf22ea53e82b69de48115e114aae76d881def8ca88c70f8f12f585b2f434311a262040723517fa44c814dfb2069dc76e76b7c
-MISC ChangeLog 3312 SHA256 55091c8a983e2b54f22f554ff06e4174b6a4df4ba2174c09ac42f68a7cf71e93 SHA512 c84ac55f5e9ec78354adf537fed5696caf304fc0ad634dc98809c9f34502838432af8566bbb745250bd3d8444b44604924269e6199c6f67433b25a17d012dde8 WHIRLPOOL 1df207be24cfa7fc70bb19cf57aac0be127cb8fe3180bb97d6ec7462b8ade678a35ad2c6663a263f84b164117b1e1811a936afaf4c78baa3729034af4aeaa3a5
+MISC ChangeLog 3464 SHA256 6c926480d9f357fbd07e5aec213676c8de43b9843ff6f7dd42ff21fe49225518 SHA512 dadbb96880a34867907de2720ed9c961982ba170575e9f749810dacbb3980189e353b8e9412dc57914c2115aef48046bbaf897b8a616a9ccbc765823ea1b0dea WHIRLPOOL 45e471d897148fcfcfd49d53aaa68124efe09427c86b3ee20284c3d7d575895ce2a727ab9bdb76ee8f2b1fa3e705ce995250da1f7dc732e8b2d1c198469cd12a
 MISC metadata.xml 310 SHA256 033cdf543570f9dfd2a40e0bd982d3f59b8f47f77cf127c62c8dce9dbd7fa90b SHA512 762d68ba46a64c5e2ae0fa579d53febdcdb4b82702763e6183355ea30c7925499c4704b2a49202f90481c9fa4bcd78174e797bdd085af3ed4532b449993dbdf7 WHIRLPOOL 8fc36d53febd9e11f5c515c1c263509a88680002578699e69877f5cc8e18582fcfc9a21a2ce777b7d82b56d389f4c240f5b2e3af7f6f91bb89063941e0c73514
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlUbvJUACgkQso7CE7gHKw1ugwCfYWDTr/uLN4Ctnzs7trx5gAk0
-mm4An2OUBVCJYgt6sMnBV5HcdfMeg13B
-=uCmm
+iEYEAREIAAYFAlUb0eYACgkQso7CE7gHKw1jbwCdGU9gfDvUaFd9ahpX7bDfXatX
+L1kAoOIQkuBRAycnW0qv2KsFdIiOUZgh
+=7OaF
 -----END PGP SIGNATURE-----
